# angle-build

./: AI-prompt.text  PACKAGE_README.md  README.md  args.ios.arm64.gn  args.ios.arm64.simulator.gn  args.mac.arm64.gn  v8.yml
.github/workflows/: angle.yml
patches/: angle-complete-static-library.patch
